# hexglobe-rs

./: Cargo.toml  README.md
benches/: adjacency.rs  projection.rs  subdivision.rs
examples/: bevy.rs
src/: denominator.rs  fixed.rs  globe.rs  hexglobe.rs  interpolation.rs  lib.rs  projection.rs  slerp.rs  subdivided_triangle.rs  subdivision.rs  tests.rs  triangle.rs
src/globe/: tests.rs
src/hexglobe/: DOCS.md  packed_index.rs  seed.rs  tests.rs
src/interpolation/: slerp.rs
src/interpolation/slerp/: tests.rs
src/projection/: globe.rs  packed_index.rs  seed.rs  tests.rs
src/projection/globe/: tests.rs
src/slerp/: DOCS.md  tests.rs
src/subdivided_triangle/: tests.rs
src/subdivision/: subdivided_triangle.rs  tests.rs  triangle.rs
src/subdivision/subdivided_triangle/: tests.rs
