[package]
name = "hexglobe"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Library to generate hexagonal tessellations of a sphere quickly and accurately."
repository = "https://github.com/MorganBennetDev/hexglobe-rs"
readme = "README.md"
keywords = ["gamedev", "graphics", "goldberg", "sphere", "tessellation"]
categories = ["game-development", "mathematics"]

[dependencies]
itertools = "0.14.0"
petgraph = "0.7.1"
glam = "0.30.1"

[dev-dependencies]
divan = "0.1.17"
bevy = "0.15.3"
bevy_panorbit_camera = "0.25.0"
ntest = "0.9.3"
assert2 = "0.3.15"

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.bevy]
features = ["dynamic_linking"]

[[bench]]
name = "subdivision"
harness = false

[[bench]]
name = "projection"
harness = false

[[example]]
name = "bevy"
path = "examples/bevy.rs"
