[package]
name = "hexglobe"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Library to generate hexagonal tessellations of a sphere quickly and accurately."
repository = "https://github.com/MorganBennetDev/hexglobe-rs"
readme = "README.md"
keywords = ["gamedev", "graphics", "goldberg", "sphere", "tessellation"]
categories = ["game-development", "mathematics"]

[dependencies]
itertools = "0.14.0"
glam = "0.30.2"

[dev-dependencies]
divan = "0.1.17"
ntest = "0.9.3"
assert2 = "0.3.15"

[dev-dependencies.bevy]
version = "0.15.3"
default-features = false
features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "tonemapping_luts",
    "bevy_gizmos",
    "bevy_pbr",
    "bevy_render",
    "bevy_window",
    "bevy_winit",
    "multi_threaded",
    "x11",
    "dynamic_linking"
]

[profile.dev.package."*"]
opt-level = 3

[[bench]]
name = "subdivision"
harness = false

[[bench]]
name = "projection"
harness = false

[[bench]]
name = "adjacency"
harness = false
