[package]
name = "hexglobe"
version = "0.1.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Library to generate hexagonal tessellations of a sphere quickly and accurately."
repository = "https://github.com/MorganBennetDev/hexglobe-rs"
readme = "README.md"
keywords = ["gamedev", "graphics", "goldberg", "sphere", "tessellation"]
categories = ["game-development", "mathematics"]

[dependencies]
itertools = "0.14.0"
glam = "0.30.2"

[dev-dependencies]
divan = "0.1.17"
ntest = "0.9.3"
assert2 = "0.3.15"
bevy_panorbit_camera = "0.25.0"

[dev-dependencies.bevy]
version = "0.15.3"

[profile.dev.package."*"]
opt-level = 3

[[bench]]
name = "projection"
harness = false

[[bench]]
name = "adjacency"
harness = false
